Fixing centering buttons on iphone bug

--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -5,7 +5,7 @@
   text-align: center;
   color: var(--blue);
 }
-.main-content{
+.main-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -74,6 +74,7 @@ form .input-name {
   position: absolute;
   width: 100%;
   height: 40px;
+  left: 0;
   border: 1px solid #88b5ef;
   box-shadow: 0 0 5px #88b5ef, 0 0 5px #88b5ef inset;
   margin: 0;
@@ -118,8 +119,6 @@ form .input-name {
   -moz-transform: rotateX(-90deg);
   transform: rotateX(-90deg);
 }
-
-
 
 @media (min-width: 480px) {
   h3 {
